fix(wau-camp): improved layout spacing and images sizing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -61,6 +61,7 @@ html, body {
     font-family: 'Montserrat', Helvetica, sans-serif;
     width: 100%;
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
